--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-    <img src="images/carousel1.jpg" alt="">
+    <img src="Images/carousel1.jpg" alt="">
     
 </body>
 </html>
